--- a/frontend/src/styles/navbar.css
+++ b/frontend/src/styles/navbar.css
@@ -5,6 +5,19 @@
     top: 0;
     width: 100%;
     z-index: 1000;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 20px;
+}
+
+.hamburger-btn {
+    background: none;
+    border: none;
+    color: white;
+    font-size: 1.5em;
+    cursor: pointer;
+    padding: 14px 0;
 }
 
 .navbar-list {
@@ -16,7 +29,7 @@
 }
 
 .navbar-item {
-    padding: 14px 20px;
+    padding: 14px 40px;
 }
 
 .navbar-item a {
